--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -5,3 +5,4 @@ $col-text-contraste: #fff;
 $col-li-contraste: rgb(208, 123, 5);
 $col-bordes:rgb(97, 72, 28);
 $texto-parrafo: 'Montserrat', sans-serif;
+$col-fondo-texto:rgb(99, 99, 45);
