--- a/scss/utilities/_header.scss
+++ b/scss/utilities/_header.scss
@@ -6,54 +6,67 @@
 
 /*header*/
 
-.titulo{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    width: 100%;
-    height: 200px;
+.head-nav{
 
-    h1{
-        font-size: 5vw;
-        width: 100%;
-        height: 100px;
-        font-family: 'Montserrat', sans-serif;
-        padding: 0 20px 0 20px;
+
+    .titulo{
         text-align: center;
+        margin: 20px 0 20px 0;
     }
-    nav{
-        width: 80%;
-        margin: 50px auto 50px auto;
-        height: 60px;
+
+    .navbar{
         background-color: $col-sec;
-        color: $col-text-contraste;
-        margin-top: 10px;
-        
+        align-content: end;
     }
-    ul{
-        padding-top: 10px;
-        margin-left: -30px;
-        text-align: center;
-    }
-    li{
-        display: inline;
-        list-style: none;
-        
-    }
-    a{
-        font-size: 2vw;
-        text-decoration: none;
-        color: $col-text-contraste;
-        padding-left: 50px;
-    }
-    a:hover{
-        color: $col-li-contraste;
-        font-size: 150%;
-    }
+        #navbarNav{
+            text-align: center;
+            justify-content: center;
+        }
+        .nav-item{    
+        }
+        .nav-link{
+            color:$col-prin;
+            font-size: x-large;
+        }
 }
 
-@media screen and (min-width: 360px) {
-    h1{
-        font-size: 2vw;
+
+
+
+@media screen and (min-width: 768px){
+    body{
+        max-width: 80%;
+        margin: auto;
+    }
+        .titulo-h1{
+            font-size: 3rem;
+        }
+        .navbar{
+            height: 100px;
+        }
+        .logo{
+            width: 150px;
+        }
+        .nav-link{
+            font-size: 3rem;
+        }
+}
+
+@media screen and (min-width: 1440px)
+{
+    .titulo-h1{
+        font-size: 5rem;
+    }
+    .navbar{
+        height: 120px;
+    }
+    .logo{
+        width: 250px;
+    }
+    .nav-item{
+        padding-left: 30px;
+    }
+    .nav-link{
+        font-size: 2rem;    
     }
 }
