--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,3 @@
-
-
 /*reset*/
 * {
   margin: 0;
@@ -12,7 +10,6 @@ body {
   width: 100vw;
   height: 100vh; }
 
-/*importar estilos header*/
 /*header*/
 .head-nav .titulo {
   text-align: center;
@@ -95,16 +92,6 @@ body {
     font-style: oblique;
     font-size: .6em; }
 
-/*footer*/
-footer {
-  text-align: center;
-  border-top: 2px solid; }
-
-.p-foot {
-  font-size: .8rem;
-  font-weight: bold;
-  padding-top: 10px; }
-
 @media screen and (min-width: 768px) {
   .main-index .subtitulo {
     font-size: 2.2rem;
@@ -127,11 +114,8 @@ footer {
     text-align: center;
     font-style: oblique;
     font-weight: bold;
-    font-size: .9em; }
-  .p-foot {
-    font-size: 1.2rem; } }
+    font-size: .9em; }}
 
-/*importar estilos nosotros*/
 /*estilos nosotros*/
 .nos-cont {
   width: 80%;
@@ -168,14 +152,7 @@ footer {
     border: 2px solid black; }
 
 @media screen and (min-width: 768px) {
-  .titulo-h1 {
-    font-size: 3rem; }
-  .navbar {
-    height: 100px; }
-  .logo {
-    width: 150px; }
-  .nav-link {
-    font-size: 3rem; }
+  
   .nos-cont {
     grid-template-columns: 1fr 1fr;
     grid-template-areas: "main aside"; }
@@ -188,16 +165,7 @@ footer {
       margin-top: 100px; } }
 
 @media screen and (min-width: 1440px) {
-  .titulo-h1 {
-    font-size: 5rem; }
-  .navbar {
-    height: 120px; }
-  .logo {
-    width: 250px; }
-  .nav-item {
-    padding-left: 30px; }
-  .nav-link {
-    font-size: 2rem; }
+  
   .nos-cont {
     grid-template-columns: 1fr 1fr;
     grid-template-areas: "main aside"; }
@@ -213,7 +181,6 @@ footer {
       width: 50%;
       margin-top: 70px; } }
 
-/*importar estilos especies*/
 /*main especies*/
 .container .bg-titulo2 {
   font-size: 1.5rem;
@@ -370,7 +337,6 @@ footer {
   .cont-cuidados .img-feng {
     margin-left: 25%; } }
 
-/*importar estilos contacto*/
 /* formulario de contacto*/
 form {
   width: 100%;
@@ -422,3 +388,18 @@ form {
     font-size: 1rem; }
   .contacto #boton {
     font-size: 1.5em; } }
+
+/*footer*/
+footer {
+  text-align: center;
+  border-top: 2px solid; }
+
+.p-foot {
+  font-size: .8rem;
+  font-weight: bold;
+  padding-top: 10px; }
+
+
+  @media screen and (min-width: 768px) {
+  .p-foot {
+    font-size: 1.2rem; }}
